Added color variables to SCSS

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,6 @@
-$Colorwhite: #FCFBF9;
-$ColorBlack: #030304;
-$colorHighlight: #F9275E;
+$colorWhite: #fcfbf9;
+$colorBlack: #030304;
+$colorHighlight: #f9275e;
+$colorLightGrey: #ececec;
+$colorDarkGrey: #d5d5d5;
+$colorSuperDarkGrey: #c0bdbd;
