--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
-@import "variables";
-@import "source/container";
-@import "source/footer";
-@import "source/header";
+@import 'variables';
+@import 'typography';
+@import 'source/container';
+@import 'source/footer';
+@import 'source/header';
