--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-.header-info{display:inline-flex}/*# sourceMappingURL=main.css.map */
+body{font-size:16px}h1{font-size:3em;font-weight:900}h2{font-size:1.5em;font-weight:900}h3{font-size:1.125em;font-weight:900}h4{font-size:1.125em;font-weight:bold}a{font-size:.75;color:#f9275e}.header-info{display:inline-flex}/*# sourceMappingURL=main.css.map */
