--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,2 @@
-.header-info{display:inline-flex}/*# sourceMappingURL=main.css.map */
+.header-info{display:inline-flex}.navbar-big{padding:2em;padding-left:3em;padding-right:3em}
+/*# sourceMappingURL=main.css.map */
