--- a/scss/source/_header.scss
+++ b/scss/source/_header.scss
@@ -1,3 +1,13 @@
 .header-info {
   display: inline-flex;
 }
+
+.navbar-big {
+  padding: 2em;
+  padding-left: 3em;
+  padding-right: 3em;
+
+  .navbar-brand {
+    
+  }
+}
