--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,8 @@ $colorHighlight: #f9275e;
 $colorLightGrey: #ececec;
 $colorDarkGrey: #d5d5d5;
 $colorSuperDarkGrey: #c0bdbd;
+
+
+//font weights
+
+$font-black: 900;
