--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,3 +1,26 @@
 @mixin transition($property) {
   transition: $property 0.10s ease-in-out ;
 }
+
+body {
+  overflow: hidden;
+  display: flex;
+  flex-flow: column;
+}
+
+
+@mixin user-select($property) {
+  -webkit-user-select: $property; /* Safari */
+  -moz-user-select: $property; /* Firefox */
+  -ms-user-select: $property; /* IE10+/Edge */
+  user-select: $property;
+}
+
+  
+.online-indicator {
+  width: 0.8em;
+  height: 0.8em;
+  background-color: $colorHighlight;
+  border-radius: 10px;
+  margin: auto 0;
+}
