--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:500,700,900');
 
+
+
 body {
+	font-family: 'Roboto', sans-serif !important;
 	font-size: 16px;
 	font-weight: 500;
 }
