--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -26,7 +26,7 @@ body {
   width: 0.8em;
   height: 0.8em;
   background-color: $colorHighlight;
-  border-radius: 10px;
+  border-radius: 50%;
   margin: auto 0;
 }
 
