--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,3 +10,24 @@ $colorSuperDarkGrey: #c0bdbd;
 
 $font-black: 900;
 $main-shadow: 0px 10px 25px rgba(0, 0, 0, .1);
+
+$grid-breakpoints: (
+  // Extra small screen / phone
+  xs: 0,
+  // Small screen / phone
+  sm: 576px,
+  // Medium screen / tablet
+  md: 768px,
+  // Large screen / desktop
+  lg: 992px,
+  // Extra large screen / wide desktop
+  xl: 1200px
+);
+
+$container-max-widths: (
+  xs: 540px,
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
