--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -23,10 +23,10 @@ body {
 }
 
 .align-left {
-  text-align: left;
+  //text-align: left;
 }
 .align-right {
-  text-align: right;
+//  text-align: right;
 }
 
 .online-indicator {
