--- a/scss/source/_container.scss
+++ b/scss/source/_container.scss
@@ -36,7 +36,7 @@
 
   .card-flex {
     height: 100%;
-    flex-direction: row;
+    //flex-direction: row;
 
     &.slide-customers {
       transform: translateX(0vw);
