--- a/scss/source/_container.scss
+++ b/scss/source/_container.scss
@@ -35,7 +35,7 @@
   height: 100%;
 
   .card-flex {
-    height: 100%;
+    //height: 100%;
     //flex-direction: row;
 
     &.slide-customers {
@@ -60,12 +60,12 @@
     .card-content {
       flex-shrink: 0;
       height: 100%;
-      width: 60vw;
+      width: 100vw;
       //height: auto;
       padding: 2em;
       padding-top: 0em;
       //margin: 4em;
-      margin-left: 20%;
+      //margin-left: 20%;
       padding-bottom: 8em;
       //margin-right: 10em;
 
