--- a/scss/source/_container.scss
+++ b/scss/source/_container.scss
@@ -27,17 +27,19 @@
   }
 
 }
-
-.container-card {
+.carousel {
   flex: 2;
+}
+.container-card {
+
   overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
 
-  .card-flex {
+
     //height: 100%;
     //flex-direction: row;
-
+        
     &.slide-customers {
       transform: translateX(0vw);
 
@@ -51,10 +53,7 @@
         transform: translateX(-160vw);
 
     }
-    transition: all 0.5s ease-in-out ;
 
-    display: flex;
-    align-items: center;
     //-webkit-overflow-scrolling: touch;
 
     .card-content {
@@ -66,7 +65,7 @@
       padding-top: 0em;
       //margin: 4em;
       //margin-left: 20%;
-      padding-bottom: 8em;
+      //padding-bottom: 8em;
       //margin-right: 10em;
 
 
@@ -83,7 +82,7 @@
 
       }
 
-    }
+
 
   }
 }
