--- a/scss/source/_container.scss
+++ b/scss/source/_container.scss
@@ -31,8 +31,8 @@
   flex: 2;
 }
 .container-card {
-
-  overflow-y: auto;
+  padding-bottom: 10em;
+  overflow-y: hidden;
   overflow-x: hidden;
   height: 100%;
 
@@ -73,12 +73,13 @@
         height: 100%;
         //max-width: 1140px;
         //width: 100vw;
+        margin-bottom: 7em;
         background-color: $colorWhite;
         box-shadow: $main-shadow;
         border-color: $colorDarkGrey;
         border-width: 2px;
         border-style: inset;
-        //overflow-y: hidden;
+        overflow-y: hidden;
 
       }
 
