--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -40,3 +40,12 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
+
+.login {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  display:block;
+}
