--- a/scss/source/_container.scss
+++ b/scss/source/_container.scss
@@ -73,7 +73,7 @@
         height: 100%;
         //max-width: 1140px;
         //width: 100vw;
-        margin-bottom: 7em;
+        //margin-bottom: 7em;
         background-color: $colorWhite;
         box-shadow: $main-shadow;
         border-color: $colorDarkGrey;
@@ -118,7 +118,7 @@
 
     }
     .search {
-      margin-bottom: 1em;
+      padding-bottom: 1em;
     }
     .overlap {
     //  height: 100%;
