--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 
 
 @import 'typography';
+@import 'source/buttons';
 @import 'source/container';
 @import 'source/footer';
 @import 'source/header';
