--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,5 +7,6 @@
 @import 'source/buttons';
 @import 'source/container';
 @import 'source/footer';
+@import 'source/login';
 @import 'source/header';
 @import 'source/modal';
