--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -41,3 +41,10 @@ body {
 ::-webkit-scrollbar {
     display: none;
 }
+.mainbody {
+  overflow:visible;
+}
+.slogan{
+  padding-left: 5em;
+  padding-right: 5em;
+}
