--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -45,6 +45,17 @@ body {
   overflow:visible;
 }
 .slogan{
-  padding-left: 5em;
-  padding-right: 5em;
+  padding-left: 2em;
+  padding-right: 2em;
+  text-align: center;
+  padding-top: 2em;
+}
+.slogantext {
+  line-height: 2em;
+}
+.spacing {
+  padding-top: 1.5em;
+}
+img {
+  height: 50em;
 }
